# AIRouter

./: .gitignore  LICENSE  LocalLLM_patch_logs.py  README.md  gradle.properties  local.properties  minimax-404-fix_20260425.md  patch_ensure2.py  patch_ensure3.py  patch_ensure_log.py  settings.gradle.kts
app/: build.gradle.kts  debug.keystore  proguard-rules.pro
app/schemas/com.airouter.data.local.db.AppDatabase/: 5.json  6.json  7.json
app/src/main/: AndroidManifest.xml
app/src/main/java/com/airouter/: AiRouterApp.kt  MainActivity.kt
app/src/main/java/com/airouter/data/local/: AttachmentStorage.kt
app/src/main/java/com/airouter/data/local/db/: AppDatabase.kt
app/src/main/java/com/airouter/data/local/db/dao/: MessageDao.kt  ProviderConfigDao.kt  SessionDao.kt
app/src/main/java/com/airouter/data/local/db/entity/: MessageEntity.kt  ProviderConfigEntity.kt  SessionEntity.kt
app/src/main/java/com/airouter/data/local/prefs/: AppConfig.kt  BuiltInProviders.kt
app/src/main/java/com/airouter/data/model/: AiModel.kt  ChatChunk.kt  ChatMessage.kt  ChatRequest.kt  ChatResponse.kt  ChatSession.kt  MessageRole.kt  ModelCatalog.kt  Provider.kt  ProviderType.kt  TokenUsage.kt
app/src/main/java/com/airouter/data/remote/dto/: OpenAiChatDto.kt
app/src/main/java/com/airouter/data/remote/local/: LocalLLMProvider.kt
app/src/main/java/com/airouter/data/remote/sse/: SseParser.kt
app/src/main/java/com/airouter/data/repository/: ChatRepository.kt  ProviderRepository.kt  SessionRepository.kt
app/src/main/java/com/airouter/debug/: DebugLog.kt
app/src/main/java/com/airouter/di/: AppModule.kt
app/src/main/java/com/airouter/domain/provider/: AIProvider.kt  ProviderFactory.kt
app/src/main/java/com/airouter/domain/provider/impl/: ClaudeProvider.kt  GeminiProvider.kt  OpenAiCompatibleProvider.kt
app/src/main/java/com/airouter/domain/usecase/: SendChatMessageUseCase.kt
app/src/main/java/com/airouter/ui/download/: DownloadViewModel.kt
app/src/main/java/com/airouter/ui/navigation/: AppNavigation.kt  Screen.kt
app/src/main/java/com/airouter/ui/screen/chat/: ChatScreen.kt  ChatViewModel.kt
app/src/main/java/com/airouter/ui/screen/home/: HomeScreen.kt  HomeViewModel.kt
app/src/main/java/com/airouter/ui/screen/local/: LocalModelScreen.kt
app/src/main/java/com/airouter/ui/screen/provider/: ProviderEditDialog.kt  ProviderEditScreen.kt  ProviderEditViewModel.kt  ProviderListScreen.kt  ProviderListViewModel.kt
app/src/main/java/com/airouter/ui/screen/settings/: SettingsScreen.kt  SettingsViewModel.kt
app/src/main/java/com/airouter/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_background.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle.kts
lib/src/main/cpp/: CMakeLists.txt  ai_chat.cpp  dummy.cpp
lib/src/main/kotlin/com/airouter/lib/: AiChat.kt  InferenceEngine.kt  InferenceException.kt
